--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,113 @@
-body {
+/* App.css */
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html, body {
+  height: 100%;
 }
+
+.App {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-image: url('background.jpg');
+  background-size: inherit;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: white;
+}
+
+.background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: inherit;
+  background-size: cover;
+  background-position: center;
+  filter: blur(1px);
+  z-index: 1;
+}
+
+.main-logo{
+  position: absolute;
+  height: 25%;
+  width: 30%;
+  color: red;
+  top: 20px;
+  left: 20px;
+  z-index: 2;
+}
+
+.login-screen {
+  z-index: 2;
+  background: rgba(0, 0, 0, 0.75);
+  padding: 20px;
+  border-radius: 20px;
+  width: 340px;
+  text-align: center;
+}
+
+.login-box {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.login-box h2 {
+  margin-bottom: 20px;
+
+}
+
+.input-field {
+  width: 90%;
+  padding: 12px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  background-color: #333;
+  color: white;
+}
+
+.login-button {
+  width: 90%;
+  padding: 12px;
+  margin: 3vh 0;
+  background-color: #e50914;
+  border: none;
+  color: white;
+  font-size: 16px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.login-button:hover {
+    background-color: darkred;
+}
+
+.options {
+  margin-top: 15px;
+  font-size: 14px;
+  color: #b3b3b3;
+}
+
+.link{
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.link:hover {
+  color: gray;
+  text-decoration: underline;
+}
+
+.extra {
+  margin-top: 15px;
+  font-size: 14px;
+  color: #b3b3b3;
+}
+
