--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -1,51 +1,9 @@
-/* src/home/Home.css */
-
 body, .home {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
     background-color: #141414;
     color: white;
-}
-
-.navbar {
-    height: 70px;
-    display: flex;
-    align-items: center;
-    padding: 10px 30px;
-    background-color: #1f1f1f;
-    position: sticky;
-    top: 0;
-    z-index: 10;
-}
-
-.navbar-logo {
-    color: red;
-    font-size: 2em;
-    margin-right: 40px;
-    margin-left: 5vh;
-}
-
-.navbar-logo:hover {
-    cursor: pointer;
-}
-
-.navbar-menu {
-    display: flex;
-    list-style: none;
-    font-size: 20px;
-    font-weight: 500;
-    margin: 0;
-    padding: 0;
-}
-
-.navbar-item {
-    margin-right: 20px;
-    cursor: pointer;
-}
-
-.navbar-item:hover {
-    text-decoration: underline;
 }
 
 .top-banner {
@@ -196,43 +154,42 @@ body, .home {
     color: rgba(255, 255, 255, 0.8);
 }
 
-.dropdown-menu {
+.movie-liked-icon {
     position: absolute;
-    top: 100%;
-    right: 0;
-    background-color: #333;
-    padding: 10px;
-    border-radius: 5px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    z-index: 10;
-    text-align: left;
-    min-width: 150px;
-}
-
-.dropdown-item {
-    color: white;
-    padding: 5px 10px;
-    font-size: 0.9rem;
-    cursor: pointer;
-    transition: background-color 0.2s ease;
-}
-
-.dropdown-item:hover {
-    background-color: rgba(255, 255, 255, 0.1);
-}
-
-.navbar-mobile-toggle {
-    display: none; /* 기본적으로 숨김 */
+    top: 8px;
+    right: 8px;
+    font-size: 20px;
+    background: linear-gradient(to bottom, orange, red); /* 노랑 -> 빨강 */
+    -webkit-background-clip: text; /* 텍스트에만 그라데이션 적용 */
+    -webkit-text-fill-color: transparent; /* 텍스트 내부를 투명하게 처리 */
+    z-index: 9;
 }
 
 /* 모바일 환경 반응형 CSS */
 @media (max-width: 768px) {
+
     .user-icon {
-        position: relative; /* 기본 위치로 복구 */
-        margin-left: auto; /* 오른쪽 끝으로 이동 */
-        margin-right: 0; /* 여백 제거 */
-        transform: none; /* transform 해제 */
+        position: absolute;
+        right: calc(5vh + 40px); /* `faBars` 오른쪽 여백에 맞춰 위치 */
+        top: 50%; /* 수직 중앙 정렬 */
+        transform: translateY(-50%);
+        margin: 0; /* 여백 제거 */
     }
+
+    .menu-icon {
+        display: flex;
+        position: absolute;
+        right: 5vh; /* 화면 오른쪽 끝에서 5vh만큼 떨어짐 */
+        top: 50%; /* 수직 중앙 정렬 */
+        transform: translateY(-50%);
+        font-size: 1.5em; /* 아이콘 크기 */
+        color: white; /* 기본 색상 */
+        cursor: pointer; /* 커서 변경 */
+    }
+    .menu-icon:hover {
+        color: rgba(255, 255, 255, 0.8);
+    }
+
     .navbar-menu {
         display: none; /* 기본적으로 숨김 */
         position: absolute;
