--- a/src/config/Navbar.css
+++ b/src/config/Navbar.css
@@ -1,4 +1,4 @@
-body, .home {
+body{
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
@@ -73,6 +73,7 @@ body, .home {
     z-index: 10;
     min-width: 150px;
     text-align: left;
+    cursor: default;
 }
 
 /* 공통 드롭다운 아이템 스타일 */
@@ -80,11 +81,11 @@ body, .home {
     color: white;
     padding: 5px 10px;
     font-size: 0.9rem;
-    cursor: pointer;
-    transition: background-color 0.2s ease;
 }
 
-.dropdown-item:hover {
+.logout:hover {
+    cursor: pointer;
+    transition: background-color 0.2s ease;
     background-color: rgba(255, 255, 255, 0.1);
 }
 
@@ -109,7 +110,13 @@ body, .home {
 }
 
 @media (max-width: 768px) {
+    .navbar{
+        padding: 0 10px;
+    }
 
+    .navbar-logo{
+        margin-left: 20px;
+    }
     .user-icon {
         position: absolute;
         right: calc(5vh + 40px); /* `faBars` 오른쪽 여백에 맞춰 위치 */
