--- a/src/config/views/infiniteView.css
+++ b/src/config/views/infiniteView.css
@@ -85,6 +85,27 @@
     color: white;
 }
 
+/* Top 버튼 */
+.top-button {
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    background-color: #007bff;
+    color: white;
+    padding: 10px;
+    border-radius: 50%;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9;
+    font-size: 0.8em;
+}
+
+.top-button:hover {
+    background-color: rgba(255, 255, 255, 0.8); /* 밝은 배경색 */
+}
 @media (max-width: 1200px) {
     .movies-container {
         grid-template-columns: repeat(5, 150px); /* 5열 */
