--- a/src/config/views/tableView.css
+++ b/src/config/views/tableView.css
@@ -73,37 +73,30 @@
 @media (max-width: 1000px) {
     .table-movies-container {
         grid-template-columns: repeat(4, 150px);
-        grid-template-rows: repeat(3, 215px); /* 2행, 제목 공간 포함 */
-        gap: 10px 3px;
-    }
-    .table-movie-card {
-        width: 130px; /* 카드 너비를 고정 */
-        height: 215px; /* 카드 높이 고정 (포스터 비율 포함) */
-        margin: 0; /* 추가 여백 제거 */
-        text-align: center; /* 텍스트 정렬 유지 */
+        grid-template-rows: repeat(3, 260px);
     }
 }
 
 @media (max-width: 768px) {
     .table-movies-container {
-        grid-template-columns: repeat(3, 130px);
-        grid-template-rows: repeat(3, 195px);
-        grid-auto-rows: 195px;
-        gap: 15px;
-        padding: 0 15px;
+        grid-template-columns: repeat(4, 106px);
+        grid-template-rows: repeat(4, 193px);
+        gap: 10px;
+        padding: 0 5px;
         margin: 0;
     }
 
     .table-movie-card {
-        width: 130px;
-        height: 195px;
+        width: 106px;
+        min-height: 193px;
         margin: 0;
-        text-align: center;
+        display: flex;
+        align-items: center;
     }
 
     .table-movie-poster {
         width: 100%;
-        height: 175px;
+        height: 159px; /* 포스터 높이 유지 */
         object-fit: contain;
         background-color: #000;
         border-radius: 6px;
@@ -113,42 +106,13 @@
         font-size: 0.75em;
         margin: 5px 0 0;
     }
-}
-
-@media(max-width: 450px) {
-    .table-movies-container {
-        grid-template-columns: repeat(3, 106px);
-        grid-auto-rows: 179px; /* 자동으로 높이를 조정 */
-        gap: 10px;
-    }
-
-    .table-movie-card {
-        width: 106px;
-        min-height: 179px; /* 최소 높이 설정 */
-        display: flex;
-        align-items: center;
-    }
-
-    .table-movie-poster {
-        width: 100%;
-        height: 159px; /* 포스터 높이 유지 */
-        object-fit: contain; /* 포스터 비율 유지 */
-        background-color: #000;
-        border-radius: 6px;
-    }
-
-    .table-movie-title {
-        font-size: 0.75em; /* 글자 크기 줄임 */
-        margin: 5px 0 0 0; /* 여백 조정 */
-        line-height: 1.2;
-        max-height: 20px;
-        max-width: 100%;
-        overflow: hidden; /* 넘치는 텍스트 숨김 */
-        text-overflow: ellipsis; /* 넘치는 텍스트 말줄임 표시 */
-        white-space: nowrap; /* 한 줄로 표시 */
-    }
-
     .table-movie-liked-icon {
         font-size: 15px;
+    }
+}
+
+@media(max-width: 480px) {
+    .table-movies-container {
+        grid-template-columns: repeat(3, 106px);
     }
 }
